# qmeta

./: .gitignore  CMakeLists.txt  README.rst  qmeta.pro
include/qmeta/: exif.h  exif_data.h  file.h  image.h  iptc.h  jpeg.h  qmeta.h  tiff.h  tiff_header.h  xmp.h
src/: exif.cc  exif.h  exif_data.cc  exif_data.h  file.cc  file.h  file_type.cc  file_type.h  identifiers.h  image.cc  image.h  iptc.cc  iptc.h  jpeg.cc  jpeg.h  standard.cc  standard.h  tiff.cc  tiff.h  tiff_header.cc  tiff_header.h  xmp.cc  xmp.h
src/file_types/: jpeg.cc  jpeg.h  tiff.cc  tiff.h
src/image/: jpeg.cc  jpeg.h  tiff.cc  tiff.h
src/metadata/: exif.cc  exif.h
src/metadata_types/: exif.cc  exif.h
